# Project-Customer-Retention

./: README.md  docker-compose.yml  pyproject.toml
DataViz/: Dockerfile  dashboard.py  requirements.txt  visualization.py
ETL/: Dockerfile  database.py  generate_data.py  insert_data.py  main.py  models.py  requirements.txt  schemas.py  select_data.py
