[tool.poetry]
name = "project-customer-retention"
version = "0.1.0"
description = ""
authors = ["Rebeca <rebecavitoriarangel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
faker = "^35.2.0"
psycopg2-binary = "^2.9.10"
streamlit = "^1.42.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
